# rasterizer

./: .gitignore  CMakeLists.txt  REAMDE.md
LeedsGLRenderWindow/: LeedsGL.cpp  LeedsGL.h  LeedsGLRenderWidget.cpp  RGBAValueF.cpp  RenderController.cpp  RenderController.h  RenderParameters.h  RenderWindow.cpp  RenderWindow.h  TexturedObject.h  ThreadPool.h  Vec.h
